# s3p-plugin-parser-fido

./: LICENSE  plugin.xml  pyproject.toml  readme.md
.github/workflows/: build-release.yml
src/s3p_plugin_parser_fido/: config.py  fido.py
tests/: test_plugin_readme.py
tests/fixtures/: payload_class.py
tests/payload/: test_plugin_run.py
